include/cortext/capi.h

  /// @brief Opaque handle to a Cortext instance.
  ///
  /// This handle must be freed with cortext_free() when no longer needed.
  typedef void *cortext_handle;
  /// @brief Binding-friendly configuration for cortext_create_with_config.
  typedef struct cortext_config
  {
    size_t struct_size;
    double focus;
    double sensitivity;
    double stability;
    int affect_interrupt;
    int affect_retrieval;
    int reinforcement_enabled;
    int procedural_enabled;
    int sequential_edges_enabled;
    int signal_filter_audio_enabled;
    int signal_filter_image_enabled;
    int signal_filter_text_enabled;
  } cortext_config;
  /// @brief Creates a Cortext instance from a binding-friendly config struct.
  /// @param cfg Optional configuration. NULL uses the library defaults.
  /// @param db_path Path to SQLite database file.
  /// @param models_dir Optional path to model assets. NULL uses the default
  ///   model root.
  CORTEXT_EXPORT cortext_handle
  cortext_create_with_config (const cortext_config *cfg, const char *db_path,
                              const char *models_dir);
  /// @brief Frees a Cortext instance and releases all resources.
  /// @param h Handle to the instance to free. Safe to pass NULL.
  ///
  /// After calling this function, the handle is invalid and must not be used.
  CORTEXT_EXPORT void cortext_free (cortext_handle h);
  /// @brief Encodes text and returns an embedding JSON object.
  ///
  /// The returned JSON has shape `{ "embedding": number[], "dimension": n }`.
  /// It is an embedding-only call: no storage, retrieval, consolidation, or
  /// processor-state mutation occurs. Free the returned string with
  /// cortext_string_free().
  CORTEXT_EXPORT char *cortext_embed_text_json (cortext_handle h,
                                                const char *text);
  /// @brief Encodes audio PCM and returns an embedding JSON object.
  ///
  /// Audio uses the same public input contract as cortext_process_audio: 16 kHz
  /// mono float32 PCM. Free the returned string with cortext_string_free().
  CORTEXT_EXPORT char *cortext_embed_audio_json (cortext_handle h,
                                                 const float *pcm,
                                                 size_t num_samples);
  /// @brief Encodes image pixels and returns an embedding JSON object.
  ///
  /// Image data uses the same public input contract as cortext_process_image.
  /// Free the returned string with cortext_string_free().
  CORTEXT_EXPORT char *cortext_embed_image_json (cortext_handle h,
                                                 const uint8_t *data,
                                                 int width, int height,
                                                 int channels);
  /// @brief Returns the last error produced by this thread's C API calls.
  CORTEXT_EXPORT const char *cortext_last_error (void);
  /// @brief Frees strings returned by JSON-returning C API helpers.
  CORTEXT_EXPORT void cortext_string_free (char *value);
  /// @brief Processes text input and returns the resulting Context as JSON.
  CORTEXT_EXPORT char *cortext_process_text_json (cortext_handle h,
                                                  const char *text,
                                                  const char *source_id);
  /// @brief Processes audio input and returns the resulting Context as JSON.
  CORTEXT_EXPORT char *cortext_process_audio_json (cortext_handle h,
                                                   const float *pcm,
                                                   size_t num_samples,
                                                   const char *source_id);
  /// @brief Processes image input and returns the resulting Context as JSON.
  CORTEXT_EXPORT char *cortext_process_image_json (cortext_handle h,
                                                   const uint8_t *data,
                                                   int width, int height,
                                                   int channels,
                                                   const char *source_id);
  /// @brief Runs shallow consolidation and returns the resulting Context as JSON.
  CORTEXT_EXPORT char *cortext_consolidate_json (cortext_handle h);