bindings/dart/lib/src/cortext_bindings.dart


  late final _cortext_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'cortext_last_error',
      );
  late final _cortext_last_error = _cortext_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// @brief Frees strings returned by JSON-returning C API helpers.
  void cortext_string_free(ffi.Pointer<ffi.Char> value) {
    return _cortext_string_free(value);
  }

  late final _cortext_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'cortext_string_free',
      );
  late final _cortext_string_free = _cortext_string_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// @brief Processes text input and returns the resulting Context as JSON.
  ffi.Pointer<ffi.Char> cortext_process_text_json(
    cortext_handle h,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> source_id,
  ) {
    return _cortext_process_text_json(h, text, source_id);
  }

  late final _cortext_process_text_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            cortext_handle,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_process_text_json');
  late final _cortext_process_text_json = _cortext_process_text_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          cortext_handle,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Processes audio input and returns the resulting Context as JSON.
  ffi.Pointer<ffi.Char> cortext_process_audio_json(
    cortext_handle h,
    ffi.Pointer<ffi.Float> pcm,
    int num_samples,
    ffi.Pointer<ffi.Char> source_id,
  ) {
    return _cortext_process_audio_json(h, pcm, num_samples, source_id);
  }

  late final _cortext_process_audio_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            cortext_handle,
            ffi.Pointer<ffi.Float>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_process_audio_json');
  late final _cortext_process_audio_json = _cortext_process_audio_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          cortext_handle,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Processes image input and returns the resulting Context as JSON.
  ffi.Pointer<ffi.Char> cortext_process_image_json(
    cortext_handle h,
    ffi.Pointer<ffi.Uint8> data,
    int width,
    int height,
    int channels,
    ffi.Pointer<ffi.Char> source_id,
  ) {
    return _cortext_process_image_json(
      h,
      data,
      width,
      height,
      channels,
      source_id,
    );
  }

  late final _cortext_process_image_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            cortext_handle,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_process_image_json');
  late final _cortext_process_image_json = _cortext_process_image_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          cortext_handle,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Encodes text and returns an embedding JSON object.
  ffi.Pointer<ffi.Char> cortext_embed_text_json(
    cortext_handle h,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _cortext_embed_text_json(h, text);
  }

  late final _cortext_embed_text_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            cortext_handle,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_embed_text_json');
  late final _cortext_embed_text_json = _cortext_embed_text_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(cortext_handle, ffi.Pointer<ffi.Char>)
      >();

  /// @brief Encodes audio PCM and returns an embedding JSON object.
  ffi.Pointer<ffi.Char> cortext_embed_audio_json(
    cortext_handle h,
    ffi.Pointer<ffi.Float> pcm,
    int num_samples,
  ) {
    return _cortext_embed_audio_json(h, pcm, num_samples);
  }

  late final _cortext_embed_audio_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            cortext_handle,
            ffi.Pointer<ffi.Float>,
            ffi.Size,
          )
        >
      >('cortext_embed_audio_json');
  late final _cortext_embed_audio_json = _cortext_embed_audio_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          cortext_handle,
          ffi.Pointer<ffi.Float>,
          int,
        )
      >();

  /// @brief Encodes image pixels and returns an embedding JSON object.
  ffi.Pointer<ffi.Char> cortext_embed_image_json(
    cortext_handle h,
    ffi.Pointer<ffi.Uint8> data,
    int width,
    int height,
    int channels,
  ) {
    return _cortext_embed_image_json(h, data, width, height, channels);
  }

  late final _cortext_embed_image_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            cortext_handle,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('cortext_embed_image_json');
  late final _cortext_embed_image_json = _cortext_embed_image_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          cortext_handle,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
        )
      >();

  /// @brief Runs shallow consolidation and returns the resulting Context as JSON.
  ffi.Pointer<ffi.Char> cortext_consolidate_json(cortext_handle h) {
    return _cortext_consolidate_json(h);
  }

  late final _cortext_consolidate_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(cortext_handle)>
      >('cortext_consolidate_json');
  late final _cortext_consolidate_json = _cortext_consolidate_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(cortext_handle)>();

}

/// @brief Opaque handle to a Cortext instance.
///
/// This handle must be freed with cortext_free() when no longer needed.
typedef cortext_handle = ffi.Pointer<ffi.Void>;

/// @brief Binding-friendly configuration for cortext_create_with_config.
final class cortext_config extends ffi.Struct {
  @ffi.Size()
  external int struct_size;

  @ffi.Double()
  external double focus;

  @ffi.Double()
  external double sensitivity;

  @ffi.Double()
  external double stability;

  @ffi.Int()
  external int affect_interrupt;

  @ffi.Int()
  external int affect_retrieval;

  @ffi.Int()
  external int reinforcement_enabled;

  @ffi.Int()
  external int procedural_enabled;

  @ffi.Int()
  external int sequential_edges_enabled;

  @ffi.Int()
  external int signal_filter_audio_enabled;

  @ffi.Int()
  external int signal_filter_image_enabled;

  @ffi.Int()
  external int signal_filter_text_enabled;
}
